deliver video active toggle until root component

--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -79,7 +79,11 @@
             <div class="guest-header">
                 <span>Guests</span>
             </div>
-            <shig-guest-list [localGuest$]="localGuest$"></shig-guest-list>
+            <shig-guest-list
+                [localGuest$]="localGuest$"
+                (activateGuestStreamEvent)="addGuest($event)"
+                (deactivateGuestStreamEvent)="removeGuest($event)"
+            ></shig-guest-list>
         </div>
     </div>
 </div>
