--- a/projects/core/assets/scss/lobby.scss
+++ b/projects/core/assets/scss/lobby.scss
@@ -319,10 +319,15 @@ canvasOne {
     position: relative;
 }
 
-.stream-video canvas {
+.stream-video canvas,
+.stream-video video
+{
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.stream-video video {
+    background-color: transparent;
 }
 
 /*==================== Control elements ====================*/
