--- a/projects/core/assets/scss/lobby.scss
+++ b/projects/core/assets/scss/lobby.scss
@@ -37,6 +37,9 @@ body {
     0 24px 20px -24px rgba(71, 82, 107, 0.1);
     --main-color: #3d42df;
     --secondary-color: #262a42;
+    --action-color: #8eff8d;
+    --attention-color: #ffdb8d;
+    --warning-color: #ff8da8;;
     --message-bg: #f3f4f9;
     --message-bg-2: #3d42df;
     --message-text: #2c303a;
@@ -170,8 +173,20 @@ button:disabled {
     margin-left: 5px;
 }
 
+.nav-icon-button.action {
+    background-color: var(--action-color) !important;
+}
+
+.nav-icon-button.attention {
+    background-color: var(--attention-color) !important;
+}
+
 .nav-icon-button.secondary {
     background-color: var(--secondary-color) !important;
+}
+
+.nav-icon-button.warning {
+    background-color: var(--warning-color) !important;
 }
 
 .nav-link {
