add request token when delete lobby

--- a/projects/core/assets/scss/lobby.scss
+++ b/projects/core/assets/scss/lobby.scss
@@ -37,9 +37,9 @@ body {
     0 24px 20px -24px rgba(71, 82, 107, 0.1);
     --main-color: #3d42df;
     --secondary-color: #262a42;
-    --action-color: #8eff8d;
+    --action-color: #41dd95;
     --attention-color: #ffdb8d;
-    --warning-color: #ff8da8;;
+    --warning-color: #dc3545;
     --message-bg: #f3f4f9;
     --message-bg-2: #3d42df;
     --message-text: #2c303a;
