--- a/projects/core/assets/scss/lobby.scss
+++ b/projects/core/assets/scss/lobby.scss
@@ -270,6 +270,7 @@ button:disabled {
 }
 .canvas-logo,
 .guest-video .guest-icon,
+.guest-video .guest-camera-off,
 .guest-video img,
 .guest-video video {
     width: 100%;
@@ -286,6 +287,10 @@ button:disabled {
 
 .guest-video .guest-icon {
     background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" height="48px" viewBox="0 0 24 24" width="48px" fill="%233c3f56"><path d="M0 0h24v24H0z" fill="none"/><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
+}
+
+.guest-video .guest-camera-off {
+    background-image: url('data:image/svg+xml, <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48" fill="%233c3f56" ><path d="M880-275 720-435v111l-60-60v-356H304l-60-60h416q24 0 42 18t18 42v215l160-160v410ZM848-27 39-836l42-42L890-69l-42 42ZM484-560Zm-87 82ZM159-800l60 60h-79v520h520v-79l60 60v19q0 24-18 42t-42 18H140q-24 0-42-18t-18-42v-520q0-24 18-42t42-18h19Z"/></svg>');
 }
 
 .guest-video video {
@@ -378,6 +383,8 @@ canvasOne {
     background-size: 24px;
     border: none;
     margin-right: 4px;
+    cursor: pointer;
+    z-index: 1;
 }
 
 .btn-mic {
