use stream name not the uuid as title

--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -14,7 +14,7 @@
                         </svg>
                         <!-- Setting icon -->
                     </button>
-                    <span class="nav-header">{{ stream.uuid | uppercase }} ({{ state }})</span>
+                    <span class="nav-header">{{ stream.title}} ({{ state }})</span>
                 </div>
             </div>
 
