--- a/projects/core/src/lib/component/guest-list/guest-list.component.html
+++ b/projects/core/src/lib/component/guest-list/guest-list.component.html
@@ -1,15 +1,15 @@
 <ng-container [shigGuestList]></ng-container>
 <div class="guest-video" [ngClass]="{'display-none': cmpRefMap.size > 0}">
-    <div class="guest-icon"></div>
+    <div class="guest-icon rounded-1 mb-1 border bg-body text-body"></div>
 </div>
 <div class="guest-video" [ngClass]="{'display-none': cmpRefMap.size > 1}">
-    <div class="guest-icon"></div>
+    <div class="guest-icon rounded-1 mb-1 border bg-body text-body"></div>
 </div>
 <div class="guest-video" [ngClass]="{'display-none': cmpRefMap.size > 2}">
-    <div class="guest-icon"></div>
+    <div class="guest-icon rounded-1 mb-1 border bg-body text-body"></div>
 </div>
 <div class="guest-video" [ngClass]="{'display-none': cmpRefMap.size > 3}">
-    <div class="guest-icon"></div>
+    <div class="guest-icon rounded-1 mb-1 border bg-body text-body"></div>
 </div>
 
 
