update device capture logic, add cancel button, fix SDP parsing, and upgrade Angular dependencies

--- a/projects/core/src/lib/component/device-capture/device-capture.component.html
+++ b/projects/core/src/lib/component/device-capture/device-capture.component.html
@@ -69,6 +69,7 @@
           <button type="button" class="btn btn-primary" (click)="select()">Update</button>
         }
         @if (!doStreamUpdate) {
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="closeModal()">Cancel</button>
           <button type="button" class="btn btn-primary" (click)="select()">Select</button>
         }
       </div>
