--- a/projects/core/src/lib/component/lobby/lobby.component.html
+++ b/projects/core/src/lib/component/lobby/lobby.component.html
@@ -1,74 +1,79 @@
 <div class="lobby">
 
-  <div class="app-main" *ngIf="stream">
-    <!--// Navigation line -->
-    <div class="navigation shadow bg-body rounded-1 border text-body">
-      <div class="nav-group" role="group" aria-label="actions">
-        <div class="nav-group-area ">
-          <button class="nav-icon-button secondary icon" (click)="goBack()">
-            <!-- Setting icon -->
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 -960 960 960"
-                 width="48">
-              <path
-                d="M220-180h150v-250h220v250h150v-390L480-765 220-570v390Zm-60 60v-480l320-240 320 240v480H530v-250H430v250H160Zm320-353Z"/>
-            </svg>
-            <!-- Setting icon -->
-          </button>
-          <span class="nav-header">{{ stream.title }} ({{ state }})</span>
+  @if (stream) {
+    <div class="app-main">
+      <!--// Navigation line -->
+      <div class="navigation shadow bg-body rounded-1 border text-body">
+        <div class="nav-group" role="group" aria-label="actions">
+          <div class="nav-group-area ">
+            <button class="nav-icon-button secondary icon" (click)="goBack()">
+              <!-- Setting icon -->
+              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 -960 960 960"
+                width="48">
+                <path
+                  d="M220-180h150v-250h220v250h150v-390L480-765 220-570v390Zm-60 60v-480l320-240 320 240v480H530v-250H430v250H160Zm320-353Z"/>
+              </svg>
+              <!-- Setting icon -->
+            </button>
+            <span class="nav-header">{{ stream.title }} ({{ state }})</span>
+          </div>
+        </div>
+        <div class="nav-group right" role="group" aria-label="actions">
+          <div class="nav-group-area">
+            <!-- join -->
+            @if (!isInLobby) {
+              <button class="btn btn-primary nav-icon-button icon" (click)="join()" [disabled]="!hasMediaStreamSet">
+                <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48" fill="currentColor">
+                  <path
+                    d="M824.941-305Q802-305 786-321.042 770-337.083 770-360v-100q0-22.917 16.059-38.958 16.059-16.042 39-16.042T864-498.958q16 16.041 16 38.958v100q0 22.917-16.059 38.958-16.059 16.042-39 16.042ZM810-160v-66q-51-8-85-43.5T690-355h30q2 42 32.5 71t72.5 29q42 0 72.5-29t32.5-71h30q-1 50-35 85.5t-85 43.957V-160h-30ZM399-500q-67 0-108.5-41.5T249-650q0-67 41.5-108.5T399-800q7 0 19 1.5t22 3.5q-26 31-38.5 66.5T389-650q0 43 12.5 78.5T440-505q-11.05 2.778-22.525 3.889Q406-500 399-500ZM40-160v-94q0-37 17.5-63t51.5-45q39-22 98-37.5T340-423q-65 31-90.5 75T224-254v94H40Zm559-340q-63 0-106.5-43.5T449-650q0-63 43.5-106.5T599-800q63 0 106.5 43.5T749-650q0 63-43.5 106.5T599-500Zm0-60q38 0 64-26.438 26-26.437 26-63.562 0-38-26-64t-63.5-26q-37.5 0-64 26T509-650.5q0 37.5 26.438 64Q561.875-560 599-560ZM284-160v-94q0-35 18.5-63.5T353-360q47-21 108.5-40.5T599-420q5 0 13.5.5t14.5.5q-6 15-10 29.5t-6 29.5h-12q-72 0-124 16.5T377-306q-16 8-24.5 21.5T344-254v34h304q11 16 26 31.5t35 28.5H284Zm315-490Zm0 430Z"/>
+                </svg>
+                <span class="d-none d-sm-inline-block">Join Lobby</span>
+              </button>
+            }
+            <!-- stop -->
+            @if (isInLobby && state=='online' && isHost) {
+              <button class="nav-icon-button warning icon" (click)="stop()">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 -960 960 960"
+                  width="48">
+                  <path
+                    d="M330-330h300v-300H330v300ZM480.266-80q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80-397.681 80-480.5q0-82.819 31.5-155.659Q143-709 197.5-763t127.341-85.5Q397.681-880 480.5-880q82.819 0 155.659 31.5Q709-817 763-763t85.5 127Q880-563 880-480.266q0 82.734-31.5 155.5T763-197.684q-54 54.316-127 86Q563-80 480.266-80Zm.234-60Q622-140 721-239.5t99-241Q820-622 721.188-721 622.375-820 480-820q-141 0-240.5 98.812Q140-622.375 140-480q0 141 99.5 240.5t241 99.5Zm-.5-340Z"/>
+                </svg>
+              </button>
+            }
+            <!-- broadcast -->
+            @if (isInLobby && state=='offline' && isHost) {
+              <button class="nav-icon-button action icon" (click)="start()"
+                [disabled]="!hasMediaStreamSet">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" fill="currentColor">
+                  <path
+                    d="M440-80v-331q-18-11-29-28.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 23-11 41t-29 28v331h-80ZM204-190q-57-55-90.5-129.5T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 86-33.5 161T756-190l-56-56q46-44 73-104.5T800-480q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 69 27 129t74 104l-57 57Zm113-113q-35-33-56-78.5T240-480q0-100 70-170t170-70q100 0 170 70t70 170q0 53-21 99t-56 78l-57-57q25-23 39.5-54t14.5-66q0-66-47-113t-113-47q-66 0-113 47t-47 113q0 36 14.5 66.5T374-360l-57 57Z"/>
+                </svg>
+              </button>
+            }
+            <!-- leave -->
+            @if (isInLobby && ((state!='online' && isHost) || (!isHost))) {
+              <button class="nav-icon-button secondary icon"
+                (click)="leaveLobby()">
+                <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48" fill="currentColor">
+                  <path
+                    d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h299v60H180v600h299v60H180Zm486-185-43-43 102-102H360v-60h363L621-612l43-43 176 176-174 174Z"/>
+                </svg>
+              </button>
+            }
+            <!-- Settings -->
+            <button class="nav-icon-button secondary icon" (click)="toggleSettings()">
+              <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 -960 960 960"
+                width="48">
+                <path
+                  d="M797-80H557q-17 0-28.5-11.5T517-120v-240q0-17 11.5-28.5T557-400h240q17 0 28.5 11.5T837-360v80l80-80v240l-80-80v80q0 17-11.5 28.5T797-80ZM480-480Zm.101-130q-53.899 0-92 38.071Q350-533.857 350-480q0 43 24 76t62 47v-68q-11-9-18.5-24.5T410-480q0-29.167 20.382-49.583Q450.765-550 479.882-550 509-550 529-529.875 549-509.75 549-481h60q0-54-37.5-91.5T480.101-610ZM388-80l-20-126q-19-7-40-19t-37-25l-118 54-93-164 108-79q-2-9-2.5-20.5T185-480q0-9 .5-20.5T188-521L80-600l93-164 118 54q16-13 37-25t40-18l20-127h184l20 126q19 7 40.5 18.5T669-710l118-54 93 164-108 77q1 10 1.5 21.5t.5 20.5h-60q0-20-2-35.5t-6-30.5l94-69-40-72-106 46q-23-26-52-43.5T538-708l-14.413-112H436l-14 112q-34 7-63.5 24T306-642l-106-46-40 72 94 69q-4 17-6.5 33.5T245-480q0 17.391 2.5 33.696Q250-430 254-413l-94 69 40 72 106-46q26 26 59.5 43.5T436-249v169h-48Z"/>
+              </svg>
+            </button>
+          </div>
         </div>
       </div>
-
-
-      <div class="nav-group right" role="group" aria-label="actions">
-        <div class="nav-group-area">
-          <!-- join -->
-          <button class="btn btn-primary nav-icon-button icon" *ngIf="!isInLobby" (click)="join()" [disabled]="!hasMediaStreamSet">
-            <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48" fill="currentColor">
-              <path
-                d="M824.941-305Q802-305 786-321.042 770-337.083 770-360v-100q0-22.917 16.059-38.958 16.059-16.042 39-16.042T864-498.958q16 16.041 16 38.958v100q0 22.917-16.059 38.958-16.059 16.042-39 16.042ZM810-160v-66q-51-8-85-43.5T690-355h30q2 42 32.5 71t72.5 29q42 0 72.5-29t32.5-71h30q-1 50-35 85.5t-85 43.957V-160h-30ZM399-500q-67 0-108.5-41.5T249-650q0-67 41.5-108.5T399-800q7 0 19 1.5t22 3.5q-26 31-38.5 66.5T389-650q0 43 12.5 78.5T440-505q-11.05 2.778-22.525 3.889Q406-500 399-500ZM40-160v-94q0-37 17.5-63t51.5-45q39-22 98-37.5T340-423q-65 31-90.5 75T224-254v94H40Zm559-340q-63 0-106.5-43.5T449-650q0-63 43.5-106.5T599-800q63 0 106.5 43.5T749-650q0 63-43.5 106.5T599-500Zm0-60q38 0 64-26.438 26-26.437 26-63.562 0-38-26-64t-63.5-26q-37.5 0-64 26T509-650.5q0 37.5 26.438 64Q561.875-560 599-560ZM284-160v-94q0-35 18.5-63.5T353-360q47-21 108.5-40.5T599-420q5 0 13.5.5t14.5.5q-6 15-10 29.5t-6 29.5h-12q-72 0-124 16.5T377-306q-16 8-24.5 21.5T344-254v34h304q11 16 26 31.5t35 28.5H284Zm315-490Zm0 430Z"/>
-            </svg>
-            <span class="d-none d-sm-inline-block">Join Lobby</span>
-          </button>
-          <!-- stop -->
-          <button class="nav-icon-button warning icon" *ngIf="isInLobby && state=='online' && isHost" (click)="stop()">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 -960 960 960"
-                 width="48">
-              <path
-                d="M330-330h300v-300H330v300ZM480.266-80q-82.734 0-155.5-31.5t-127.266-86q-54.5-54.5-86-127.341Q80-397.681 80-480.5q0-82.819 31.5-155.659Q143-709 197.5-763t127.341-85.5Q397.681-880 480.5-880q82.819 0 155.659 31.5Q709-817 763-763t85.5 127Q880-563 880-480.266q0 82.734-31.5 155.5T763-197.684q-54 54.316-127 86Q563-80 480.266-80Zm.234-60Q622-140 721-239.5t99-241Q820-622 721.188-721 622.375-820 480-820q-141 0-240.5 98.812Q140-622.375 140-480q0 141 99.5 240.5t241 99.5Zm-.5-340Z"/>
-            </svg>
-          </button>
-          <!-- broadcast -->
-          <button class="nav-icon-button action icon" *ngIf="isInLobby && state=='offline' && isHost" (click)="start()"
-                  [disabled]="!hasMediaStreamSet">
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 -960 960 960" fill="currentColor">
-              <path
-                d="M440-80v-331q-18-11-29-28.5T400-480q0-33 23.5-56.5T480-560q33 0 56.5 23.5T560-480q0 23-11 41t-29 28v331h-80ZM204-190q-57-55-90.5-129.5T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 86-33.5 161T756-190l-56-56q46-44 73-104.5T800-480q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 69 27 129t74 104l-57 57Zm113-113q-35-33-56-78.5T240-480q0-100 70-170t170-70q100 0 170 70t70 170q0 53-21 99t-56 78l-57-57q25-23 39.5-54t14.5-66q0-66-47-113t-113-47q-66 0-113 47t-47 113q0 36 14.5 66.5T374-360l-57 57Z"/>
-            </svg>
-          </button>
-          <!-- leave -->
-          <button class="nav-icon-button secondary icon" *ngIf="isInLobby && ((state!='online' && isHost) || (!isHost))"
-                  (click)="leaveLobby()">
-            <svg xmlns="http://www.w3.org/2000/svg" height="48" viewBox="0 -960 960 960" width="48" fill="currentColor">
-              <path
-                d="M180-120q-24 0-42-18t-18-42v-600q0-24 18-42t42-18h299v60H180v600h299v60H180Zm486-185-43-43 102-102H360v-60h363L621-612l43-43 176 176-174 174Z"/>
-            </svg>
-          </button>
-          <!-- Settings -->
-          <button class="nav-icon-button secondary icon" (click)="toggleSettings()">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" height="48" viewBox="0 -960 960 960"
-                 width="48">
-              <path
-                d="M797-80H557q-17 0-28.5-11.5T517-120v-240q0-17 11.5-28.5T557-400h240q17 0 28.5 11.5T837-360v80l80-80v240l-80-80v80q0 17-11.5 28.5T797-80ZM480-480Zm.101-130q-53.899 0-92 38.071Q350-533.857 350-480q0 43 24 76t62 47v-68q-11-9-18.5-24.5T410-480q0-29.167 20.382-49.583Q450.765-550 479.882-550 509-550 529-529.875 549-509.75 549-481h60q0-54-37.5-91.5T480.101-610ZM388-80l-20-126q-19-7-40-19t-37-25l-118 54-93-164 108-79q-2-9-2.5-20.5T185-480q0-9 .5-20.5T188-521L80-600l93-164 118 54q16-13 37-25t40-18l20-127h184l20 126q19 7 40.5 18.5T669-710l118-54 93 164-108 77q1 10 1.5 21.5t.5 20.5h-60q0-20-2-35.5t-6-30.5l94-69-40-72-106 46q-23-26-52-43.5T538-708l-14.413-112H436l-14 112q-34 7-63.5 24T306-642l-106-46-40 72 94 69q-4 17-6.5 33.5T245-480q0 17.391 2.5 33.696Q250-430 254-413l-94 69 40 72 106-46q26 26 59.5 43.5T436-249v169h-48Z"/>
-            </svg>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <!--        <div *ngIf="!hasMediaStreamSet || displaySettings">-->
-    <!--            <shig-device-settings [cbk]="cbk" [closeCbk]=toggleSettings.bind(this)></shig-device-settings>-->
+      <!--        <div *ngIf="!hasMediaStreamSet || displaySettings">-->
+      <!--            <shig-device-settings [cbk]="cbk" [closeCbk]=toggleSettings.bind(this)></shig-device-settings>-->
     <!--        </div>-->
-
     @if (!hasMediaStreamSet || displaySettings) {
       <shig-device-capture
         [onSelect]=onDeviceSelect.bind(this)
@@ -76,30 +81,34 @@
         [doStreamUpdate]=hasMediaStreamSet
       ></shig-device-capture>
     }
-
     <!--// Video Stream -->
     <div class="video-call-wrapper shadow border rounded-1">
       <div id="lobby-stream-video" class="stream-video canvas-logo">
-        <canvas id="canvasOne" *ngIf="isHost">
-          Your browser does not support HTML5 Canvas.
-        </canvas>
-        <video id="video-stream" #videoStreamElement muted autoplay *ngIf="!isHost"></video>
+        @if (isHost) {
+          <canvas id="canvasOne">
+            Your browser does not support HTML5 Canvas.
+          </canvas>
+        }
+        @if (!isHost) {
+          <video id="video-stream" #videoStreamElement muted autoplay></video>
+        }
       </div>
     </div>
   </div>
+}
 
-  <!-- Right Side -->
-  <div class="right-side">
-    <div class="guest-container shadow rounded-1 border text-body">
-      <div class="guest-header border-bottom rounded-top-1 bg-body">
-        <span>Guests</span>
-      </div>
-      <shig-guest-list
-        [localGuest$]="localGuest$"
-        [istHost]="isHost"
-        (activateLobbyMediaStreamEvent)="addLobbyMediaStream($event)"
-        (deactivateLobbyMediaStreamEvent)="removeLobbyMediaStream($event)"
-      ></shig-guest-list>
+<!-- Right Side -->
+<div class="right-side">
+  <div class="guest-container shadow rounded-1 border text-body">
+    <div class="guest-header border-bottom rounded-top-1 bg-body">
+      <span>Guests</span>
     </div>
+    <shig-guest-list
+      [localGuest$]="localGuest$"
+      [istHost]="isHost"
+      (activateLobbyMediaStreamEvent)="addLobbyMediaStream($event)"
+      (deactivateLobbyMediaStreamEvent)="removeLobbyMediaStream($event)"
+    ></shig-guest-list>
   </div>
+</div>
 </div>
